elf: Refactor -mdiv-rem option

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -2,6 +2,7 @@ debug = Debug
 release = Release
 
 option.target = Target Processor
+option.divrem = Integer divide instructions (-mdiv-rem)
 option.code_density = Code density (-mcode-density)
 option.barrel_shifter = Barrel shifter (-mbarrel-shifter)
 option.norm = Bitscan instruction (-mnorm)
