elf: Refactor -mll64 option

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -7,3 +7,4 @@ option.code_density = Code density (-mcode-density)
 option.barrel_shifter = Barrel shifter (-mbarrel-shifter)
 option.norm = Bitscan instruction (-mnorm)
 option.swap = Swap instruction (-mswap)
+option.ll64 = 64-bit load/store instructions (-mll64)
