elf: Refactor -matomic option
Also make it available only for ARC 700, because it is always present
for ARC HS, and I don't think it makes sense to make negation available
in the GUI.

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -8,3 +8,4 @@ option.barrel_shifter = Barrel shifter (-mbarrel-shifter)
 option.norm = Bitscan instruction (-mnorm)
 option.swap = Swap instruction (-mswap)
 option.ll64 = 64-bit load/store instructions (-mll64)
+option.atomic = Atomic functions (-matomic)
