--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -9,3 +9,4 @@ option.norm = Bitscan instruction (-mnorm)
 option.swap = Swap instruction (-mswap)
 option.ll64 = 64-bit load/store instructions (-mll64)
 option.atomic = Atomic functions (-matomic)
+option.ea = Extended Arithmetic Instructions (-mea)
