elf: Refactor -mxy option

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -10,3 +10,5 @@ option.swap = Swap instruction (-mswap)
 option.ll64 = 64-bit load/store instructions (-mll64)
 option.atomic = Atomic functions (-matomic)
 option.ea = Extended Arithmetic Instructions (-mea)
+option.xy = DSP XY memory (-mxy)
+option.xy.tip = Passed down to the assembler to enable the XY memory extension. Also sets the preprocessor symbol __Xxy.
