elf: Refactor -mno-dpfp-lrsr option

--- a/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
+++ b/org.eclipse.cdt.cross.arc.gnu/gnu.elf.properties
@@ -12,3 +12,4 @@ option.atomic = Atomic functions (-matomic)
 option.ea = Extended Arithmetic Instructions (-mea)
 option.xy = DSP XY memory (-mxy)
 option.xy.tip = Passed down to the assembler to enable the XY memory extension. Also sets the preprocessor symbol __Xxy.
+option.dpfplrsr = Forbid LR and SR to use FPX registers (-mno-dpfp-lrsr)
